# Explainable-ML-Predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LEARN.md  SLO.md
infra/k8s/: deployment.yaml  secret.example.yaml
src/exml/: __init__.py  api.py  cli.py  config.py  data.py  explain.py  features.py  model.py  monitoring.py  observability.py  schemas.py  security.py  train.py
tests/: test_api_smoke.py  test_train_smoke.py
tests/load/: locustfile.py
